WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285828
[WebGPU] Switching pipelines does not zero out dynamic offsets from prior pipeline
https://bugs.webkit.org/show_bug.cgi?id=285828
Summary
[WebGPU] Switching pipelines does not zero out dynamic offsets from prior pip...
Mike Wyrzykowski
Reported
2025-01-12 23:40:20 PST
[WebGPU] Auto pipeline layout can not share GPUBindGroups with any other pipelines - see
https://www.w3.org/TR/webgpu/#pipeline-base
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-01-12 23:40:42 PST
radar://142761614
Mike Wyrzykowski
Comment 2
2025-01-13 16:51:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38969
EWS
Comment 3
2025-01-15 20:43:35 PST
Committed
288990@main
(46c6dd5414b6): <
https://commits.webkit.org/288990@main
> Reviewed commits have been landed. Closing PR #38969 and removing active labels.
Mike Wyrzykowski
Comment 4
2025-01-16 21:57:03 PST
Reopened Bugzilla. This regressed PlayCanvas sample
https://playcanvas.vercel.app/#/graphics/reflection-box
, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=286119
.
Mike Wyrzykowski
Comment 5
2025-01-16 22:26:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39178
EWS
Comment 6
2025-01-17 09:50:42 PST
Committed
289069@main
(479f27f56399): <
https://commits.webkit.org/289069@main
> Reviewed commits have been landed. Closing PR #39178 and removing active labels.
Mike Wyrzykowski
Comment 7
2025-01-23 23:12:54 PST
***
Bug 286122
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug